--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,10 @@
   "author": "Roberto Friber Marin Guzman",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "type": "module",
   "devDependencies": {
